feat: Add baseUrl in tsconfig (need to build with vite)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "noFallthroughCasesInSwitch": true,
 
     /* Path Alias*/
+    "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
     }
