--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -18,6 +18,8 @@ jobs:
 
       - name: Set up pnpm
         uses: pnpm/action-setup@v2
+        with:
+          version: latest
 
       - name: Install dependencies
         run: pnpm install
