--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -41,6 +41,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
+          file: ./Dockerfile-prod
           context: .
           push: true
           tags: ghcr.io/noname2048/cz:latest
