chore: Install mobx-react

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.0.0",
     "eslint-plugin-mobx": "^0.0.9",
     "mobx": "^6.10.2",
+    "mobx-react": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
