--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@dnd-kit/utilities": "^3.2.1",
     "@reduxjs/toolkit": "^1.9.6",
     "clsx": "^2.0.0",
+    "eslint-plugin-mobx": "^0.0.9",
+    "mobx": "^6.10.2",
+    "mobx-react": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
@@ -27,7 +30,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/parser": "^6.6.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.45.0",
