--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
     "@reduxjs/toolkit": "^1.9.6",
+    "@types/uuid": "^9.0.4",
     "clsx": "^2.0.0",
     "eslint-plugin-mobx": "^0.0.9",
     "mobx": "^6.10.2",
@@ -24,7 +25,8 @@
     "react-router-dom": "^6.16.0",
     "redux-saga": "^1.2.3",
     "store2": "^2.14.2",
-    "tailwind-merge": "^1.14.0"
+    "tailwind-merge": "^1.14.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
