feat: Install @faker-js/faker

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
+    "@faker-js/faker": "^8.1.0",
     "@reduxjs/toolkit": "^1.9.6",
     "@types/uuid": "^9.0.4",
     "clsx": "^2.0.0",
